--- a/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
+++ b/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
@@ -14,7 +14,9 @@
       <copyright>Cofoundry.org</copyright>
       <tags>Cofoundry Azure</tags>
       <dependencies>
-        <dependency id="AutoMapper" version="5.1.1" />
+        <dependency id="AutoMapper" version="5.2.0" />
+        <dependency id="Cofoundry.Core" version="0.1.0-beta0106" />
+        <dependency id="Cofoundry.Domain" version="0.1.0-beta0106" />
         <dependency id="Conditions" version="2.1.0" />
         <dependency id="EntityFramework" version="6.1.3" />
         <dependency id="HtmlAgilityPack" version="1.4.9.5" />
@@ -22,16 +24,14 @@
         <dependency id="Microsoft.AspNet.Razor" version="3.2.3" />
         <dependency id="Microsoft.AspNet.WebPages" version="3.2.3" />
         <dependency id="Microsoft.Azure.KeyVault.Core" version="1.0.0" />
-        <dependency id="Microsoft.Data.Edm" version="5.6.4" />
-        <dependency id="Microsoft.Data.OData" version="5.6.4" />
-        <dependency id="Microsoft.Data.Services.Client" version="5.6.4" />
+        <dependency id="Microsoft.Data.Edm" version="5.7.0" />
+        <dependency id="Microsoft.Data.OData" version="5.7.0" />
+        <dependency id="Microsoft.Data.Services.Client" version="5.7.0" />
         <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
         <dependency id="Newtonsoft.Json" version="9.0.1" />
-        <dependency id="RazorEngine" version="3.9.0" />
-        <dependency id="System.Spatial" version="5.6.4" />
-        <dependency id="WindowsAzure.Storage" version="7.2.1" />
-        <dependency id="Cofoundry.Core" version="$version$" />
-        <dependency id="Cofoundry.Domain" version="$version$" />
+        <dependency id="RazorEngine" version="3.9.3" />
+        <dependency id="System.Spatial" version="5.7.0" />
+        <dependency id="WindowsAzure.Storage" version="8.0.1" />
       </dependencies>
     </metadata>
     <files>
