--- a/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
+++ b/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
@@ -7,8 +7,8 @@
         <authors>Cofoundry</authors>
         <owners>Cofoundry</owners>
         <licenseUrl>https://github.com/cofoundry-cms/Cofoundry.Plugins.Azure/blob/master/LICENSE</licenseUrl>
-        <projectUrl>http://www.cofoundry.org</projectUrl>
-		<iconUrl>http://cofoundry.org/Content/images/external/logo-nuget-64x64.png</iconUrl>
+        <projectUrl>https://www.cofoundry.org</projectUrl>
+		<iconUrl>https://www.cofoundry.org/Content/images/external/logo-nuget-64x64.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Services, abstractions and helpers for running in an Azure environment</description>
       <copyright>Cofoundry.org</copyright>
