--- a/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
+++ b/src/Cofoundry.Plugins.Azure/Uber.Core.Azure.nuspec
@@ -15,23 +15,27 @@
       <tags>Cofoundry Azure</tags>
       <dependencies>
         <dependency id="AutoMapper" version="5.2.0" />
-        <dependency id="Cofoundry.Core" version="0.1.0-beta0106" />
-        <dependency id="Cofoundry.Domain" version="0.1.0-beta0106" />
+        <dependency id="Cofoundry.Core" version="0.1.0" />
+        <dependency id="Cofoundry.Domain" version="0.1.0" />
         <dependency id="Conditions" version="2.1.0" />
         <dependency id="EntityFramework" version="6.1.3" />
         <dependency id="HtmlAgilityPack" version="1.4.9.5" />
         <dependency id="Microsoft.AspNet.Mvc" version="5.2.3" />
         <dependency id="Microsoft.AspNet.Razor" version="3.2.3" />
         <dependency id="Microsoft.AspNet.WebPages" version="3.2.3" />
-        <dependency id="Microsoft.Azure.KeyVault.Core" version="1.0.0" />
-        <dependency id="Microsoft.Data.Edm" version="5.7.0" />
-        <dependency id="Microsoft.Data.OData" version="5.7.0" />
-        <dependency id="Microsoft.Data.Services.Client" version="5.7.0" />
+        <dependency id="Microsoft.Azure.KeyVault.Core" version="2.0.4" />
+        <dependency id="Microsoft.Data.Edm" version="5.8.2" />
+        <dependency id="Microsoft.Data.OData" version="5.8.2" />
+        <dependency id="Microsoft.Data.Services.Client" version="5.8.2" />
         <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
         <dependency id="Newtonsoft.Json" version="9.0.1" />
         <dependency id="RazorEngine" version="3.9.3" />
-        <dependency id="System.Spatial" version="5.7.0" />
-        <dependency id="WindowsAzure.Storage" version="8.0.1" />
+        <dependency id="System.ComponentModel.EventBasedAsync" version="4.3.0" />
+        <dependency id="System.Dynamic.Runtime" version="4.3.0" />
+        <dependency id="System.Linq.Queryable" version="4.3.0" />
+        <dependency id="System.Net.Requests" version="4.3.0" />
+        <dependency id="System.Spatial" version="5.8.2" />
+        <dependency id="WindowsAzure.Storage" version="8.1.0" />
       </dependencies>
     </metadata>
     <files>
