--- a/test/Cofoundry.Plugins.Azure.Tests/Cofoundry.Plugins.Azure.Tests.csproj
+++ b/test/Cofoundry.Plugins.Azure.Tests/Cofoundry.Plugins.Azure.Tests.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.local.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
