--- a/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
+++ b/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0" />
-    <PackageReference Include="Cofoundry.Domain" Version="0.8.1-ci0048" />
+    <PackageReference Include="Cofoundry.Domain" Version="0.9.0" />
   </ItemGroup>
 
 </Project>
