Updating to latest v0.10 pre-release

--- a/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
+++ b/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
-    <PackageReference Include="Cofoundry.Domain" Version="0.9.3-reworking-user-a0098" />
+    <PackageReference Include="Cofoundry.Domain" Version="0.9.3-ci0106" />
   </ItemGroup>
 
 </Project>
