--- a/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
+++ b/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
-    <PackageReference Include="Cofoundry.Domain" Version="0.10.4-ci0006" />
+    <PackageReference Include="Cofoundry.Domain" Version="0.11.0" />
   </ItemGroup>
 
 </Project>
