--- a/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
+++ b/src/Cofoundry.Plugins.Azure/Cofoundry.Plugins.Azure.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+	<TargetFramework>net8.0</TargetFramework>
 	<ImplicitUsings>enable</ImplicitUsings>
-
+	<Nullable>enable</Nullable>
+	
 	<PackageId>Cofoundry.Plugins.Azure</PackageId>
     <Description>Services, abstractions and helpers for running in an Azure environment.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -12,13 +13,13 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\net6.0\Cofoundry.Plugins.Azure.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\net8.0\Cofoundry.Plugins.Azure.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
-    <PackageReference Include="Cofoundry.Domain" Version="0.11.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+    <PackageReference Include="Cofoundry.Domain" Version="0.11.5-dotnet-8-0031" />
   </ItemGroup>
 
 </Project>
